# market_research_agent

./: .gitignore  LICENSE  Makefile  Procfile  README.md  pyproject.toml  pytest.ini  python-tests.yml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  template.env
research_agent/: agents.py  app.py  main.py  prompts.py  query.txt  storage.py  utils.py  version.py  workflow.py
tests/: conftest.py  test_research_workflow.py
