[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "market-research-agent"
version = "0.2.0"
description = "AI-powered market research assistant"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Mike Pesavento", email = "mike@peztek.com"}
]
urls.Homepage = "https://github.com/mpesavento/market_research_agent"
urls.Bug-Tracker = "https://github.com/mpesavento/market_research_agent/issues"
urls.Live-Demo = "https://agentic-market-research-asst-aac5e24f35f7.herokuapp.com/"
dependencies = [
    "openai~=1.57.2",
    "langchain~=0.3.11",
    "langgraph~=0.2.58",
    "langchain-core",
    "langchain-openai",
    "langchain-community",
    "python-dotenv",
    "aiosqlite",
    "pygments",
    "gradio",
    "markdown",
    "mdpdf",
    "tavily-python",
    "boto3",
    "botocore",
    "urllib3",
]

[tool.setuptools]
packages = ["research_agent"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi-line_output = 3
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "gradio.*",
    "weasyprint.*",
    "pdfkit.*",
    "tavily.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.read-metadata]
files = ["research_agent/version.py"]
mapping.__author__ = "authors"
mapping.__author_email__ = "authors"
mapping.__description__ = "description"
mapping.__urls__ = "urls"

[project.scripts]
market-research-agent = "research_agent.app:main"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[tool.hatch.build.hooks.vcs]
version-file = "research_agent/version.py"
